Fixed DigiWeb Design heading alignment

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1405,9 +1405,11 @@ section.lazy-placeholder:after {
 }
 .cid-rCwtSD9IRj H3 {
   color: #f79c7b;
+  text-align: left;
 }
 .cid-rCwtSD9IRj H1 {
   color: #c66330;
+  text-align: left;
 }
 .cid-rCwtSD9IRj .mbr-text,
 .cid-rCwtSD9IRj .mbr-section-btn {
